--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
             <div class="cell" id="cell-8" role="gridcell" tabindex="0"></div>
             <div class="cell" id="cell-9" role="gridcell" tabindex="0"></div>
         </div>
+        <div class="player-inputs">
+            <label for="player-x">Player X: </label>
+            <input type="text" id="player-x" placeholder="Enter name for Player X">
+            <label for="player-o">Player O: </label>
+            <input type="text" id="player-o" placeholder="Enter name for Player O">
+            <button id="start-game">Start Game</button>
+        </div>
+        
         <div class="status" aria-live="polite">
             Current Player: <span id="current-player">X</span>
         </div>
