--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe</title>
+    <title>TIC-TAC-TOE</title>
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
+    <div id="bg-layer"></div>
     <header>
-        <h1>Tic Tac Toe</h1>
+        <h1>Tic-Tac-Toe</h1>
     </header>
     <main>
+        <div class="player-inputs">
+            <label for="player-x">Player X: </label>
+            <input type="text" id="player-x" placeholder="Enter name for Player X">
+            <label for="player-o">Player O: </label>
+            <input type="text" id="player-o" placeholder="Enter name for Player O">
+            <button id="start-game">Start Game</button>
+        </div>
         <div class="game-board" role="grid" aria-label="Tic Tac Toe Board">
             <div class="cell" id="cell-1" role="gridcell" tabindex="0"></div>
             <div class="cell" id="cell-2" role="gridcell" tabindex="0"></div>
@@ -22,18 +31,17 @@
             <div class="cell" id="cell-8" role="gridcell" tabindex="0"></div>
             <div class="cell" id="cell-9" role="gridcell" tabindex="0"></div>
         </div>
-        <div class="player-inputs">
-            <label for="player-x">Player X: </label>
-            <input type="text" id="player-x" placeholder="Enter name for Player X">
-            <label for="player-o">Player O: </label>
-            <input type="text" id="player-o" placeholder="Enter name for Player O">
-            <button id="start-game">Start Game</button>
-        </div>
-        
         <div class="status" aria-live="polite">
             Current Player: <span id="current-player">X</span>
         </div>
+        <div class="scoreboard">
+            <span id="score-x">X: 0</span> | <span id="score-o">O: 0</span>
+        </div>
         <button id="reset-button">Reset Game</button>
+        <div class="rounds-history">
+            <h2>Last 10 Rounds</h2>
+            <ul id="rounds-list"></ul>
+        </div>
     </main>
     <script src="assets/js/script.js"></script>
 </body>
