file_path update

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
     <meta name="description" content="Play Tic-Tac-Toe online! A simple and fun game where you can play against friends or an AI. Enjoy the classic 3x3 grid game and see who can align three symbols first.">
-    <link rel="icon" href="/assets/favicon/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="icon" href="assets/favicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <div id="bg-layer"></div>
